test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_for_loop.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    Int: 
                    None: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[0]: 
                  None: 
                None: 
                CNull: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
